Fixed Layout Bugs

--- a/Events/content/scss/_variables.scss
+++ b/Events/content/scss/_variables.scss
@@ -33,7 +33,7 @@ $colors: map-merge( ( "blue": $blue, "indigo": $indigo, "purple": $purple, "pink
 $primary: $main !default;
 $secondary: $gray-600 !default;
 $success: $green !default;
-$info: $cyan !default;
+$info: $orange !default;
 $warning: $yellow !default;
 $danger: $red !default;
 $light: $gray-100 !default;
@@ -122,9 +122,9 @@ input[type="search"]::-webkit-search-cancel-button:hover {
     color: $primary;
 }
 
-@media (max-width: 700px) {
+@media (max-width: 760px) {
     .dropdown-menu {
-        width: 100%;
+        width: 100% !important;
     }
 }
 
